--- a/vagrant/vfx-studio-soe/Vagrantfile
+++ b/vagrant/vfx-studio-soe/Vagrantfile
@@ -8,6 +8,13 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         vfx_studio_soe.vm.box = "centos/7"
     end
 
+    config.nfs.map_uid = Process.uid
+    config.nfs.map_gid = Process.gid
+
+    vfx_mount = ENV['VAGRANT_VFX_MOUNT']
+
+    config.vm.synced_folder "#{vfx_mount}", "/vfx", type: "nfs"
+
     ansible_root = ENV['ANSIBLE_ROOT']
     ansible_vault_password_file = ENV['ANSIBLE_VAULT_PASSWORD_FILE']
 
