Tidy kickstart configuration.

--- a/packer/vfx-studio-soe/http/ks.cfg
+++ b/packer/vfx-studio-soe/http/ks.cfg
@@ -18,8 +18,7 @@ keyboard --vckeymap=us --xlayouts=''
 lang en_US.UTF-8
 
 # Network information
-network  --bootproto=dhcp --device=eth0 # --ipv6=auto --no-activate
-# network  --hostname=localhost.localdomain
+network  --bootproto=dhcp --device=eth0
 
 # Root password
 rootpw changeme 
@@ -43,41 +42,11 @@ clearpart --all --initlabel --drives=vda
 # Reboot the system when the install is complete
 reboot
 
-# Set up an additional user account 
-# user --name=ops --plaintext --password changeme --groups=ops,wheel
-
 %packages
 @core
 chrony
 kexec-tools
 
-# Unnecessary firmware
-#-aic94xx-firmware
-#-atmel-firmware
-#-b43-openfwwf
-#-bfa-firmware
-#-ipw2100-firmware
-#-ipw2200-firmware
-#-ivtv-firmware
-#-iwl100-firmware
-#-iwl1000-firmware
-#-iwl3945-firmware
-#-iwl4965-firmware
-#-iwl5000-firmware
-#-iwl5150-firmware
-#-iwl6000-firmware
-#-iwl6000g2a-firmware
-#-iwl6050-firmware
-#-libertas-usb8388-firmware
-#-ql2100-firmware
-#-ql2200-firmware
-#-ql23xx-firmware
-#-ql2400-firmware
-#-ql2500-firmware
-#-rt61pci-firmware
-#-rt73usb-firmware
-#-xorg-x11-drv-ati-firmware
-#-zd1211-firmware
 %end
 
 %addon com_redhat_kdump --enable --reserve-mb='auto'
@@ -89,16 +58,6 @@ yum -y install epel-release
 yum -y install ansible
 yum -y install sudo
 yum -y upgrade
-
-# echo "%ops ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/ops
-# sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers # do we need?
-
-
 yum clean all
-%end
 
-#%anaconda
-#pwpolicy root --minlen=6 --minquality=1 --notstrict --nochanges --notempty
-#pwpolicy user --minlen=6 --minquality=1 --notstrict --nochanges --emptyok
-#pwpolicy luks --minlen=6 --minquality=1 --notstrict --nochanges --notempty
-#%end
+%end
